fixed alignments.

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -144,7 +144,7 @@
   color: white;
   font-size: 90px;
   margin-top: 15%;
-  margin-left: 20%;
+  margin-left: 23%;
 }
 
 .user-home-under{
@@ -152,10 +152,10 @@
   color: white;
   font-size: 30px;
   margin-top: 9%;
-  margin-left: 38%;
+  margin-left: 42%;
 }
 
 .search-bar{
   padding-top: 50px;
-  margin-left: 40%;
+  margin-left: 43.5%;
 }
